# facematch

./: .env.dist  .gitignore  Dockerfile  Makefile  README.md  celery_worker.7z  docker-compose.yml  findings.md  manage.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: django.yml
face_rec/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
recognizeapp/: __init__.py  admin.py  apps.py  models.py  signals.py  tasks.py  utils.py
recognizeapp/management/commands/: dedupe.py  report.html
recognizeapp/migrations/: 0001_initial.py  0002_individual_face_encoding.py  0003_individual_duplicate.py
src/recognizeapp/: __main__.py  c.py  csv.html  report.html  tasks.py  utils.py
